fixed margins and spacing in flights page
margins and spacing in flights page was off, and fixed all the cards to be well adjusted with eachother

--- a/css/main.css
+++ b/css/main.css
@@ -1392,8 +1392,12 @@ color: #e51728;
   margin-left: 2%;
 }
 .bookMarsFlight img{
-  margin-left: 100px;
+  margin-left: 165px;
   margin-right: auto;
+}
+
+.marsFlight{
+  margin-left: 30px;
 }
 
 .marsFlightTitle{
@@ -1426,6 +1430,9 @@ color: #e51728;
   text-decoration: line-through;
 }
 
+.marsStarReviews{
+  margin-right: 10px;
+}
 .lineDivideReview{
   width: 2px;
   height: 30px;
@@ -1438,7 +1445,7 @@ color: #e51728;
     font-weight: 400;
     font-style: normal;
     color:#00000086;
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .marsFlightDesc{
@@ -1523,7 +1530,7 @@ color: #e51728;
 .addInfoRow{
   display: flex;
   gap: 8px;
-  row-gap: 50px;
+  line-height: 40px;
 }
 
 .addInfoLabel{
@@ -1578,6 +1585,9 @@ color: #e51728;
 
   color:#55daeb;
 }
+.neptuneStarReviews{
+  margin-right: 20px;
+}
 .lineDivideReviewNeptune{
   width: 2px;
   height: 30px;
@@ -1596,7 +1606,7 @@ color: #e51728;
     font-weight: 400;
     font-style: normal;
     color:#ffffff8c;
-    font-size: 12px;
+    font-size: 14px;
 }
 .neptuneFlightDesc{
   font-family: "Poppins", sans-serif;
@@ -1658,6 +1668,7 @@ color: #e51728;
     color:#ffffff8c;
     font-size: 16px;
 }
+
 /*Jupiter product card styling*/
 .bookJupiterFlight{
   border: none;
@@ -1668,13 +1679,22 @@ color: #e51728;
   align-items: center;
 }
 .jupiterFlightCard{
-  margin-top: 5%;
+  height: 100vh;
   border: none;
-  margin-left: 2%;
+  
 }
 .bookJupiterFlight img{
-  margin-left: 100px;
+  margin-top: 9%;
+  margin-left: 190px;
   margin-right: auto;
+}
+
+.col{
+  margin-left: 35px;
+}
+.jupiterFlight{
+  margin-top: 35px;
+  margin-left: 30px;
 }
 
 .jupiterFlightTitle{
@@ -1695,7 +1715,9 @@ color: #e51728;
 
   color: #00000082;
 }
-
+.jupiterStarReviews{
+  margin-right: 20px;
+}
 .lineDivideReviewJupiter{
   width: 2px;
   height: 30px;
@@ -1708,7 +1730,7 @@ color: #e51728;
     font-weight: 400;
     font-style: normal;
     color: #00000082;
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .jupiterFlightDesc{
@@ -1804,7 +1826,8 @@ color: #e51728;
 
 /*Saturn Product Card styling*/
 .bookSaturnFlight{
-  height: 100vh;
+  
+  
   border: none;
   background-color:#45016d;
 
@@ -1819,10 +1842,17 @@ color: #e51728;
 }
 
 .bookSaturnFlightIMG{
-  margin-left: 130px;
+  margin-top: 9%;
+  margin-left: 190px;
   margin-right: auto;
 }
+.saturnFlight{
+  margin-top: 26px;
+  margin-left: 30px;
+}
 .saturnFlightCard {
+  height: 100vh;
+ 
   background-color: #45016d;
   border: none;
 }
@@ -1935,13 +1965,19 @@ color: #e51728;
   align-items: center;
 }
 .uranusFlightCard{
-  margin-top: 5%;
+  height: 100vh;
+ 
   border: none;
-  margin-left: 2%;
+  
 }
 .bookUranusFlight img{
-  margin-left: 100px;
+  margin-top: 9%;
+  margin-left: 190px;
   margin-right: auto;
+}
+.uranusFlight{
+  margin-top: 30px;
+  margin-left: 30px;
 }
 
 .uranusFlightTitle{
@@ -1964,7 +2000,9 @@ color: #e51728;
 }
 
 
-
+.uranusStarReviews{
+  margin-right: 2%;
+}
 .lineDivideReviewUranus{
   width: 2px;
   height: 30px;
@@ -1977,7 +2015,7 @@ color: #e51728;
     font-weight: 400;
     font-style: normal;
     color: #00000082;
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .uranusFlightDesc{
@@ -2075,7 +2113,7 @@ color: #e51728;
 
 /*Moon flight Card styling*/
 .bookMoonFlight{
-  height: 100vh;
+  
   border: none;
   background-color:#45016d;
 
@@ -2085,19 +2123,25 @@ color: #e51728;
 }
 
 .bookMoonFlight{
+
   margin-left: auto;
   margin-right: auto;
 }
 
 .bookMoonFlightIMG{
-  margin-left: 130px;
+  margin-top: 9%;
+  margin-left: 190px;
   margin-right: auto;
 }
 .moonFlightCard {
+  height: 105vh;
   background-color: #45016d;
   border: none;
 }
-
+.moonFlight{
+  margin-top: 30px;
+  margin-left: 30px;
+}
 .moonFlightTitle{
   font-family: "Poppins", sans-serif;
   font-weight: 700;
@@ -2114,6 +2158,9 @@ color: #e51728;
   font-size: 24px;
 
   color:#55daeb;
+}
+.moonStarReviews{
+  margin-right: 20px;
 }
 .lineDivideReviewMoon{
   width: 2px;
@@ -2133,7 +2180,7 @@ color: #e51728;
     font-weight: 400;
     font-style: normal;
     color:#ffffff8c;
-    font-size: 12px;
+    font-size: 14px;
 }
 .moonFlightDesc{
   font-family: "Poppins", sans-serif;
@@ -2214,6 +2261,7 @@ color: #e51728;
 .viewCartButtonBottom{
   display: flex;
   justify-content: right;
+  padding: auto;
   
 }
 
